--- a/index.html
+++ b/index.html
@@ -1,30 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>HTTP in PHP</title>
+    </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTTP in PHP</title>
-</head>
-
-<body>
-    <ul>
-        <li><a href="./README.md">HTTP Requests and Responses</a></li>
-        <li><a href="./broken/">Broken PHP script</a></li>
-        <li><a href="./fixed/">Fixed PHP script</a>
-            <ul>
-                <li>By putting everything in the right order,</li>
-                <li>And removing unnecessary trailing closing PHP brackets, e.g. <span
-                        style="font-family: monospace;">?></span>
-                </li>
-            </ul>
-        </li>
-        <li><a href="./fixed/">Fixed PHP script</a>
-            <ul>
-                <li>By using output buffering.</li>
-            </ul>
-        </li>
-    </ul>
-</body>
-
+    <body>
+        <ul>
+            <li><a href="./README.md">HTTP Requests and Responses</a></li>
+            <li><a href="./broken/">Broken PHP script</a></li>
+            <li>
+                <a href="./fixed/">Fixed PHP script</a>
+                <ul>
+                    <li>By putting everything in the right order,</li>
+                    <li>
+                        And removing unnecessary trailing closing PHP brackets, e.g.
+                        <span style="font-family: monospace">?></span>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <a href="./buffering/">Fixed PHP script</a>
+                <ul>
+                    <li>By using output buffering.</li>
+                </ul>
+            </li>
+        </ul>
+    </body>
 </html>
