- Adds simple css

--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>HTTP in PHP</title>
+        <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css" />
     </head>
 
     <body>
+        <h1 id="http-in-php-basics">HTTP in PHP Basics</h1>
+        <h2>Documentation</h2>
         <ul>
-            <li><a href="./README.md">HTTP Requests and Responses</a></li>
+            <li><a href="./readme.html">HTTP Requests and Responses</a></li>
+        </ul>
+        <h2>Examples</h2>
+        <ul>
             <li><a href="./broken/">Broken PHP script</a></li>
             <li>
                 <a href="./fixed/">Fixed PHP script</a>
